// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`governor prompt text buildInterceptorInstructions 1`] = `
"PREAMBLE

TEMPLATE

## Active Intent Stack
[
  {
    "id": "itnt_a",
    "kind": "request",
    "description": "Add a box",
    "completed_when": null,
    "changelog": []
  }
]

## False Completions
[
  {
    "id": "fcomp_1",
    "intent_id": "itnt_a",
    "summary": "summary fcomp_1",
    "relies_on": "r",
    "completes_as": "c",
    "false_because": "f",
    "detect_by": null,
    "evidence": null,
    "resolution": null,
    "resolution_reason": null,
    "still_assumed": null,
    "directive": null
  }
]
"
`;

exports[`governor prompt text buildRejectionContext 1`] = `
"

Active Intents: [{"id":"itnt_a","kind":"request","description":"Add a box","completed_when":null,"changelog":[]}]
"
`;

exports[`governor passes entry runs entry then false-completion listing, skipping merge when nothing was open 1`] = `
"PREAMBLE

ENTRY

## Active Intent Stack
[
  {
    "id": "itnt_a",
    "kind": "request",
    "description": "Add a box",
    "completed_when": null,
    "changelog": []
  }
]

## False Completions
[]
"
`;

exports[`governor passes entry runs entry then false-completion listing, skipping merge when nothing was open 2`] = `
"PREAMBLE

FC_LIST

## Active Intent Stack
[
  {
    "id": "itnt_a",
    "kind": "request",
    "description": "Add a box",
    "completed_when": null,
    "changelog": []
  }
]

## False Completions
[]
"
`;

exports[`governor passes exit runs false-completion listing before the exit verdict, on the original conversation 1`] = `
"PREAMBLE

EXIT

## Active Intent Stack
[
  {
    "id": "itnt_a",
    "kind": "request",
    "description": "Add a box",
    "completed_when": null,
    "changelog": []
  }
]

## False Completions
[]
"
`;
